2003-08-22  Martin Willers <willers@xm-arts.de>
	- fix ToolTip disappearing prematurely
	(patch by "Ivan")

2003-04-17  Martin Willers <willers@xm-arts.de>
	- fixed bug with propagation of valueChanged() signals from TimeEdit
	- fixed bug: removing all teas from list was leading to crash!
	- changed default tea time of "anonymous" dialog to 3 minutes

2003-04-10  Martin Willers <willers@xm-arts.de>
	- have now proper wrapping time-edit widget
	- added facility to start steeping an 'anonymous' tea
	- using new KDE 3.1.1 method for positioning KNotifyClient
	(based on patches provided by Daniel Teske)

2003-03-14  Martin Willers <willers@xm-arts.de>
	- added "Configure Events..." button for quick access to kcontrol
	- some internal tidying and cleanups
	- using convenience class TeaListItem instead of QListViewItem
	- small optimization: don't use lastitem() of listbox (which traverses whole list),
	  work with itemBelow() instead
	- using custom TimeEdit-widget for entering times with minutes and seconds
	(patches provided by Daniel Teske)

2003-03-07  (external)
	- Implement place holder for tea sort like requested in #54551

2003-02-23  Martin Willers <willers@xm-arts.de>
	- "beep" option now uses KNotify::event()
	  (need own "steeping" sound now)
	(patch provided by Daniel Teske <teske@bigfoot.com>)

2003-02-22  Martin Willers <willers@xm-arts.de>
	- don't display ticks in left-click menu

2003-02-15  Martin Willers <willers@xm-arts.de>
	- using KActions for start, stop, and configure entries
	- display list of configured teas on left-click,
	  making one-click starting of a new tea possible
	- some cleanups

2003-02-07  Martin Willers <willers@xm-arts.de>
	- fixed inserting of new items into listview
	- simplified layout in config-window
	- fixed sizing of labels in config-window
	- using QValueVector instead of a QStringList for teas
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2003-01-07  Martin Willers <willers@xm-arts.de>