@@ -1,11 +1,24 @@
-/* -------------------------------------------------------------
-
-   toplevel.h
-
-   (C) 1998-1999 by Matthias Hoelzer-Kluepfel (hoelzer@kde.org)
-
- ------------------------------------------------------------- */
-
+/*
+ *   This file is part of the KTeaTime application.
+ *
+ *   Copyright (C) 1998-1999  Matthias Hoelzer-Kluepfel (hoelzer@kde.org)
+ *   Copyright (C) 2002-2003  Martin Willers (willers@xm-arts.de)
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU General Public License as published by
+ *   the Free Software Foundation; either version 2 of the License, or
+ *   (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details.
+ *
+ *   You should have received a copy of the GNU General Public License
+ *   along with this program; if not, write to the Free Software
+ *   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ *
+ */
 
 #ifndef _TOPLEVEL_H_
 #define _TOPLEVEL_H_
@@ -88,7 +101,7 @@ private:
 
 	bool useNotify, usePopup, useAction;
 	QString action;
-	bool useTrayVis;                    // visualize progress in tray icon as pie chart
+	bool useTrayVis;                    // visualize progress in tray icon
 
 	QPixmap *mugPixmap, *teaNotReadyPixmap, *teaAnim1Pixmap, *teaAnim2Pixmap;
 
